--- a/FashionShop-Client/package.json
+++ b/FashionShop-Client/package.json
@@ -8,15 +8,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@types/react-redux": "^7.1.34",
     "antd": "^5.22.2",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.3.0",
+    "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^10.0.6",
+    "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
