--- a/FashionShop-Admin/FashionShop.csproj
+++ b/FashionShop-Admin/FashionShop.csproj
@@ -7,18 +7,12 @@
     </PropertyGroup>
 
     <ItemGroup>
-      <Compile Remove="Filters\**" />
-      <Content Remove="Filters\**" />
-      <EmbeddedResource Remove="Filters\**" />
-      <None Remove="Filters\**" />
-    </ItemGroup>
-
-    <ItemGroup>
       <Folder Include="Context\" />
       <Folder Include="Views\Shared\Partials\" />
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="BCrypt.Net-Core" Version="1.6.0" />
       <PackageReference Include="Microsoft.AspNetCore.Http.Extensions" Version="2.2.0" />
       <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.10" />
@@ -31,5 +25,10 @@
       <PackageReference Include="Microsoft.VisualStudio.Web.CodeGeneration.EntityFrameworkCore" Version="8.0.6" />
       <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="8.0.2" />
     </ItemGroup>
+
+    <ItemGroup>
+      <_ContentIncludedByDefault Remove="Services\Authenticate\Login.cshtml" />
+    </ItemGroup>
+    
 
 </Project>
