--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,41 @@
-# Ignore build output directories
-bin/
-obj/
-
-# Ignore specific files
-*.dll
-*.exe
-*.pdb
-*.cache
-*.json
-*.nuget.g.props
-
-# Ignore Visual Studio and IDE-specific files
-.vs/
-*.user
-*.suo
-
-# Ignore temporary files
-*.tmp
-*.temp
+# Bỏ qua tất cả file log
 *.log
 
+# Bỏ qua thư mục node_modules
 node_modules/
+
+# Bỏ qua thư mục tạm thời
+/tmp
+
+# Bỏ qua file IDE cấu hình
+.idea/
+.vscode/
+
+# Debug files
+bin/
+obj/
+*.pdb
+
+# User-specific files
+*.user
+*.suo
+*.userosscache
+*.sln.docstates
+
+# Visual Studio Code settings
+.vscode/
+*.code-workspace
+
+# Rider settings
+.idea/
+
+# Temporary files
+*.tmp
+*.bak
+*.swp
+*.obj
+*.pyc
+*.class
+*.idb
+*.ilk
+*.tlog
