--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,13 @@ obj/
 *.idb
 *.ilk
 *.tlog
+/FashionShop-Admin/.vs/FashionShop/FileContentIndex/2181e909-dbf8-4dfc-b258-5c97346d0833.vsidx
+/FashionShop-Admin/.vs/FashionShop/FileContentIndex/2ca63ebf-723f-4626-902f-c28e394bbfdf.vsidx
+/FashionShop-Admin/.vs/FashionShop/FileContentIndex/72ae3b1e-ae98-4721-a1e2-c53ddddf3c6d.vsidx
+/FashionShop-Admin/.vs/FashionShop/FileContentIndex/7fe972ad-57f8-4c66-a6e2-f4ae40c6fa41.vsidx
+/FashionShop-Admin/.vs/FashionShop/FileContentIndex/98aa3bf8-b549-40bf-b86b-26a17fdf91ed.vsidx
+/FashionShop-Admin/.vs/FashionShop/FileContentIndex
+/FashionShop-Admin/.vs/FashionShop/FileContentIndex/aaddb0ee-40d0-4101-911b-b5fd4b7c17a2.vsidx
+/FashionShop-Admin/.vs/ProjectEvaluation/fashionshop.metadata.v9.bin
+/FashionShop-Admin/.vs/ProjectEvaluation/fashionshop.projects.v9.bin
+/FashionShop-Admin/.vs/ProjectEvaluation/fashionshop.strings.v9.bin
