Hiển thị thông tin Website để chỉnh sửa

--- a/FashionShop-Admin/FashionShop.csproj
+++ b/FashionShop-Admin/FashionShop.csproj
@@ -28,6 +28,7 @@
     
     <ItemGroup>
       <_ContentIncludedByDefault Remove="Services\Authenticate\Login.cshtml" />
+      <_ContentIncludedByDefault Remove="Pages\WebsiteInfo\Index.cshtml" />
     </ItemGroup>
     
 </Project>
