--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,5 @@ obj/
 *.log
 
 node_modules/
+/FashionShop-Admin/obj/Debug/net8.0/FashionShop.AssemblyInfoInputs.cache
+/FashionShop-Admin/obj/Debug/net8.0/FashionShop.AssemblyInfo.cs
