update forgot password

--- a/FashionShop-Admin/appsettings.json
+++ b/FashionShop-Admin/appsettings.json
@@ -9,5 +9,20 @@
   "ConnectionStrings": {
       "DefaultConnection": "Server=mysql-fashion-finsr8280-699e.h.aivencloud.com;Port=13062;Database=defaultdb;Uid=avnadmin;Pwd=AVNS_UIxLS_rvA7dyKjwnFDf;"
   },
+  "Application": {
+    "Domain": "https://localhost:44325/",
+    "ForgotPassword" : "Authenticate/ResetPassword?token={0}&id={1}"
+  },
+  "SMTPConfig": {
+    "SenderAddress": "fashionshop@gmail.com",
+    "SenderDisplayName": "Fashion Shop",
+    "UserName": "d88e6073537a0d",
+    "Password": "b8620551097de1",
+    "host": "sandbox.smtp.mailtrap.io",
+    "Port":2525 ,
+    "EnableSSL": true,
+    "UseDefaultCredentials": true,
+    "IsBodyHtml": true
+  },
   "AllowedHosts": "*"
 }
