--- a/FashionShop-API/FashionShop-API.csproj
+++ b/FashionShop-API/FashionShop-API.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
         <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="12.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.0" />
+        <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.10" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.10"/>
         <PackageReference Include="Microsoft.EntityFrameworkCore" Version="8.0.10" />
         <PackageReference Include="Microsoft.EntityFrameworkCore.Abstractions" Version="8.0.10" />
@@ -30,6 +32,7 @@
 
     <ItemGroup>
       <Folder Include="Controllers\" />
+      <Folder Include="Dto\ResponseDto\" />
     </ItemGroup>
 
 </Project>
