--- a/FashionShop-Client/package.json
+++ b/FashionShop-Client/package.json
@@ -3,17 +3,19 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-tailwind/react": "^3.0.0-beta.24",
     "@tanstack/react-form": "^0.36.3",
     "@tanstack/react-query": "^5.61.0",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.34",
-    "antd": "^5.22.2",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-helmet-async": "^2.0.5",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
