Add Api Login and register

--- a/FashionShop-API/appsettings.json
+++ b/FashionShop-API/appsettings.json
@@ -5,9 +5,24 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Jwt": {
+    "Issuer": "FashionShop",
+    "Audience": "FashionShop",
+    "expires": "30",
+    "SecretKey": "FashionShopSuperSecretKeyVipProAccess"
+  },
   "ConnectionStrings": {
     "DefaultConnection": "Server=mysql-fashion-finsr8280-699e.h.aivencloud.com;Port=13062;Database=defaultdb;Uid=avnadmin;Pwd=AVNS_UIxLS_rvA7dyKjwnFDf;",
-    "Redis" : "localhost:6379"
+    "Redis" : "localhost:6379,abortConnect=false"
+  },
+  "Application": {
+    "Domain": "https://localhost:44350/"
+  },
+  "EmailSettings": {
+    "Port": 587,
+    "Host": "smtp.gmail.com",
+    "Email": "finsr8280@gmail.com",
+    "Password": "rukxiauqbzqdssnd"
   },
   "AllowedHosts": "*"
 }
