--- a/FashionShop-Client/package.json
+++ b/FashionShop-Client/package.json
@@ -12,6 +12,7 @@
     "@types/react-redux": "^7.1.34",
     "axios": "^1.7.7",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "motion": "^11.15.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -20,7 +21,7 @@
     "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
     "react-scripts": "5.0.1",
-    "react-toastify": "^10.0.6",
+    "react-toastify": "^11.0.2",
     "redux": "^5.0.1",
     "web-vitals": "^2.1.4"
   },
