--- a/FashionShop-Client/package.json
+++ b/FashionShop-Client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@heroicons/react": "^2.2.0",
     "@material-tailwind/react": "^3.0.0-beta.24",
     "@tanstack/react-form": "^0.36.3",
     "@tanstack/react-query": "^5.61.0",
