--- a/FashionShop-Client/package.json
+++ b/FashionShop-Client/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@hookform/resolvers": "^3.9.1",
     "@material-tailwind/react": "^3.0.0-beta.24",
     "@tanstack/react-form": "^0.36.3",
     "@tanstack/react-query": "^5.61.0",
@@ -17,13 +18,15 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-helmet-async": "^2.0.5",
+    "react-hook-form": "^7.54.2",
     "react-icons": "^5.3.0",
     "react-redux": "^9.1.2",
     "react-router": "^7.0.1",
     "react-scripts": "5.0.1",
     "react-toastify": "^11.0.2",
     "redux": "^5.0.1",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "zod": "^3.24.1"
   },
   "scripts": {
     "start": "react-scripts start",
