--- a/FashionShop-API/Properties/launchSettings.json
+++ b/FashionShop-API/Properties/launchSettings.json
@@ -24,7 +24,7 @@
       "dotnetRunMessages": true,
       "launchBrowser": true,
       "launchUrl": "swagger",
-      "applicationUrl": "https://localhost:7068;http://localhost:5250",
+      "applicationUrl": "http://localhost:7068;http://localhost:5250",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
