--- a/FashionShop-Client/package.json
+++ b/FashionShop-Client/package.json
@@ -3,8 +3,8 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@hookform/resolvers": "^3.9.1",
     "@heroicons/react": "^2.2.0",
+    "@hookform/resolvers": "^3.9.1",
     "@material-tailwind/react": "^3.0.0-beta.24",
     "@tanstack/react-form": "^0.36.3",
     "@tanstack/react-query": "^5.61.0",
@@ -13,6 +13,7 @@
     "@testing-library/user-event": "^13.5.0",
     "@types/react-redux": "^7.1.34",
     "axios": "^1.7.7",
+    "iconoir-react": "^7.10.1",
     "js-cookie": "^3.0.5",
     "jwt-decode": "^4.0.0",
     "motion": "^11.15.0",
