Add google login

--- a/FashionShop-API/appsettings.json
+++ b/FashionShop-API/appsettings.json
@@ -5,6 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "Google": {
+    "ClientId": "130191915602-u411nofidnfdhmknatr3jpbu0nac2v3v.apps.googleusercontent.com",
+    "ClientSecret": "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"
+  },
   "Jwt": {
     "Issuer": "FashionShop",
     "Audience": "FashionShop",
