add forgot password

--- a/FashionShop-API/appsettings.json
+++ b/FashionShop-API/appsettings.json
@@ -20,7 +20,7 @@
     "Redis" : "localhost:6379,abortConnect=false"
   },
   "Application": {
-    "Domain": "https://localhost:7068/"
+    "Domain": "http://localhost:7068/"
   },
   "EmailSettings": {
     "Port": 587,
