--- a/FashionShop-API/FashionShop-API.csproj
+++ b/FashionShop-API/FashionShop-API.csproj
@@ -39,4 +39,8 @@
         <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="wwwroot\assets\images\review\" />
+    </ItemGroup>
+
 </Project>
