--- a/FashionShop-Client/package.json
+++ b/FashionShop-Client/package.json
@@ -6,6 +6,7 @@
     "@heroicons/react": "^2.2.0",
     "@hookform/resolvers": "^3.9.1",
     "@material-tailwind/react": "^3.0.0-beta.24",
+    "@microsoft/signalr": "^8.0.7",
     "@react-oauth/google": "^0.12.1",
     "@tanstack/react-form": "^0.36.3",
     "@tanstack/react-query": "^5.61.0",
